Se agregaron nuevos estilos

--- a/component/footer.html
+++ b/component/footer.html
@@ -1,11 +1,25 @@
 <footer>
         <div class="footer-child social">
-            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.
+          <h3 class="tittle-style">Solo<span>Juegos</span></h3>
+          <p>Aenean sodales eros ac scelerisque sagittis. Aliquam porta consectetur blandit. Nulla sed augue nisl. Vivamus pulvinar ullamc orper malesuada.</p>
+          <p>Suspendisse ornare velit eget dolor fringilla, et imperdiet ipsum convallis. Integer faucibus, felis nec lobortis hendrerit, augue mi mattis massa, vitae lobortis neque nunc ut eros. Donec massa lectus</p>
         </div>
         <div class="footer-child contacto">
-            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.
+          <h3>ÚLTIMOS ARTÍCULOS</h3>
+          <section class="last-articles">
+            <img class="last-image-preview" src="img/sw.jpeg" alt="" />
+            <a href="#">Ya está disponible la actualización gratuita de marzo de Star Wars: Battlefront</a>
+          </section class="last-articles">
+          <section class="last-articles">
+            <img class="last-image-preview" src="img/lionhead.jpg" alt="" />
+            <a href="#">Microsoft cancela Fable Legends y negocia el cierre de Lionhead Studios</a>
+          </section>
+          <section class="last-articles">
+            <img class="last-image-preview" src="img/por.jpg" alt="" />
+            <a href="#">Ediciones de Consolas solo para Nostalgicos</a>
+          </section>
         </div>
         <div class="footer-child derechos">
-            Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et voluptates alias incidunt pariatur aliquid ut, minima soluta itaque maxime nisi aliquam sit, ex animi, dolor laboriosam illo mollitia, quas libero.
         </div>
 </footer>
