--- a/component/header.html
+++ b/component/header.html
@@ -1,5 +1,5 @@
 <header>
-        <h1><a href="index.html?pag=home">SOLO<span>JUEGOS<span></a></h1>
+        <h1><a class="tittle-style" href="index.html?pag=home">SOLO<span>JUEGOS<span></a></h1>
         <div id="menu-header" class="menu-header">
             <a href="#">Login</a>
             <a href="./index.html?pag=sitemap">Mapa del sitio</a>
@@ -12,7 +12,7 @@
  </header>
 
 <nav id="menu">
-    <ul id="menu-items"> 
+    <ul id="menu-items">
         <li><a href="./index.html?pag=home">Inicio</a></li>
         <li><a href="./index.html?pag=news">Noticias</a></li>
         <li><a href="./index.html?pag=consoles">Consolas</a></li>
@@ -30,7 +30,7 @@
 
             x.addEventListener('click', function () {
             x.classList.toggle('mostrar');
-        
+
             if(contador == 0){
                 contador = 1;
                 menu.classList.add('menu-show');
@@ -43,5 +43,5 @@
         });
     }
 )();
-    
+
 </script>
