--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,6 +73,7 @@ header {
 #header {
     position: fixed;
     width: 100%;
+    z-index: 3000;
 }
 header{
   z-index: 3000;
@@ -321,7 +322,7 @@ nav ul li a:hover {
   padding: 10px;
 }
 .article-news{
-  padding-top: 10px;
+  padding: 20px 0;
   margin: 20px 0;
   border-top: 1px solid #E0E0E0;
 }
@@ -360,22 +361,55 @@ aside {
     -ms-flex: 1 1 30%;
     flex: 1 1 30%;
 }
-aside div {
-    margin: 10px;
-}
 .imgaside {
     display: block;
     width: 100%
 }
+.users-fans{
+    margin: 0 auto;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.users-fans-social{
+  padding: 15px;
+  width: 50%;
+  font-size: 1.2rem;
+  display: block;
+  color: #fff;
 
+}
+.users-fans-social i{
+  margin-right: 10px;
+  position: relative;
+  top: .2rem;
+}
+.users-fans-social:hover{
+  background-color: #0B0B0B;
+}
+
+.social-facebook{
+  background-color: #3b5998;
+}
+.social-twitter{
+  background-color: #55ACEE;
+}
+.social-googleplus{
+  background-color: #dd4b39;
+}
+.social-youtube{
+  background-color: #e52d27;
+}
 /* estilos footer */
 
 footer {
     background: #0B0B0B;
     padding: 40px;
-    display: flex;
 }
-footer .contacto h3{
+.final-last-footer{
+  display: flex;
+}
+.footer-tittle-entry{
     padding-bottom: 15px;
     color: #fff;
 }
@@ -407,6 +441,48 @@ footer .contacto h3{
   border-color: #fff;
   border-width: 1px;
   clear: both;
+}
+
+.gallery-row{
+  display: flex;
+  justify-content: space-between;
+}
+.last-images img{
+  border: 5px solid #fff;
+  display: block;
+  margin: 5px;
+  width: 30%;
+  height: 86px;
+}
+.footer-legal{
+  margin-top: 15px;
+  color: #fff;
+}
+.footer-legal p{
+  display: inline-block;
+  color: #fff;
+  font-family: "sans-serif";
+  font-size: .8rem;
+}
+.legal-social{
+  float: right;
+  display: inline-block;
+}
+.legal-social li{
+  display: inline-block;
+}
+.legal-social li a{
+  display: inline-block;
+  color: #fff;
+  padding: 5px;
+  border-radius: 50%;
+}
+.legal-social li i{
+  position: relative;
+  top: 2px;
+}
+.legal-social li a:hover{
+  background-color: #66cc33;
 }
 
 
@@ -469,7 +545,7 @@ footer .contacto h3{
     .consoles .interno .texbox {
         text-align: center;
     }
-    footer{
+    .final-last-footer{
       flex-direction: column;
     }
     .footer-child {
@@ -478,6 +554,18 @@ footer .contacto h3{
     }
     .footer-child:last-child{
         margin-bottom: 0;
+    }
+
+    .footer-legal p{
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
+    }
+    .legal-social{
+      float: none;
+      text-align: center;
+      width: 90%;
+      margin: 0 auto;
     }
     .search-news{
       display: block;
@@ -498,6 +586,7 @@ footer .contacto h3{
     #video{
       width: 100%;
     }
+
 }
 @media screen and (max-width: 600px) {
     .article-entry {
@@ -529,6 +618,9 @@ footer .contacto h3{
         padding: 10px;
         border-bottom: 1px solid #E0E0E0;
         border-right: none;
+    }
+    footer{
+      padding: 15px;
     }
 }
 
