--- a/css/estilos.css
+++ b/css/estilos.css
@@ -182,6 +182,9 @@ nav ul li a:hover {
     }
 }
 
+.menu-items-header{
+  display: none;
+}
 /* Estilos envoltorio principal (Envuelve las etiquetas nav, section y aside) */
 
 .contenedor {
@@ -288,9 +291,10 @@ nav ul li a:hover {
     border-right: 1px solid #E0E0E0;
     padding: 10px;
     /* FlEXBOX */
-    -webkit-flex: 1 1 70%;
-    -ms-flex: 1 1 70%;
-    flex: 1 1 70%;
+    /*flex: 1 1 70%;*/
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 70%;
 }
 
 /* Article */
@@ -309,12 +313,12 @@ nav ul li a:hover {
     border-bottom: none;
 }
 .image-preview {
-    width: 50%;
     margin-right: 10px;
     /* FlEXBOX */
-    -webkit-flex: 0 0 300px;
-    -ms-flex: 0 0 300px;
-    flex: 0 0 300px;
+    /* flex: 0 0 300px; */
+    flex-grow: 0;
+    flex-shrink: 0;
+    max-width: 300px;
     -webkit-align-self: center;
     -ms-flex-item-align: center;
     align-self: center;
@@ -324,9 +328,9 @@ nav ul li a:hover {
 }
 .content-preview {
     /* FlEXBOX */
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
+    /*flex: 1;*/
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 .article-tittle {
     font-size: 1.5em;
@@ -354,10 +358,10 @@ nav ul li a:hover {
     color: #5BB32E;
     transform: scale(1.5)
 }
-.options .options-social a span{
-  position: relative;
-  top: 2px;
-  font-size: 1.5rem;
+.options .options-social a span {
+    position: relative;
+    top: 2px;
+    font-size: 1.5rem;
 }
 
 /* Opción leer más */
@@ -401,19 +405,59 @@ nav ul li a:hover {
     height: 480px;
     overflow: scroll;
 }
+.image-video-preview li {
+    position: relative;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
 .image-video-preview img {
+    display: block;
     max-width: 100%;
 }
-#video {
+.image-video-preview a::after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-left: 20px solid #fff;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.image-video-preview a::before {
+    content: "";
+    width: 70px;
+    height: 50px;
+    background: #e52d27;
+    position: absolute;
+    border-top-left-radius: 15% 30%;
+    border-top-right-radius: 15% 30%;
+    border-bottom-left-radius: 15% 30%;
+    border-bottom-right-radius: 15% 30%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.image-video-preview a:hover:before {
+    background-color: #66cc33;
+}
+#video-slider {
     width: 70%;
 }
 
 /* Estilos aside */
 
 aside {
-    -webkit-flex: 1 1 30%;
-    -ms-flex: 1 1 30%;
-    flex: 1 1 30%;
+    /*flex: 1 1 30%;*/
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 30%;
 }
 .imgaside {
     display: block;
@@ -462,13 +506,17 @@ footer {
 }
 .final-last-footer {
     display: flex;
+    flex-direction: row;
 }
 .footer-tittle-entry {
     padding-bottom: 15px;
     color: #fff;
 }
 .footer-child {
-    flex: 0 0 33%;
+    /*flex: 0 0 33%;*/
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 33%;
     margin-right: 20px;
 }
 .footer-child:last-child {
@@ -501,6 +549,7 @@ footer {
     justify-content: space-between;
 }
 .last-images img {
+    position: relative;
     border: 5px solid #fff;
     display: block;
     margin: 5px;
@@ -552,6 +601,9 @@ footer {
         -ms-flex-direction: column;
         flex-direction: column;
     }
+    .contenido .main {
+        width: 100%;
+    }
     .sidebar {
         display: none;
     }
@@ -589,6 +641,9 @@ footer {
         overflow: scroll;
         height: calc(100% - 70px);
     }
+    .menu-items-header{
+      display: block;
+    }
     .consoles .interno img {
         float: none;
         margin-right: 0;
@@ -603,6 +658,7 @@ footer {
     .footer-child {
         margin-right: 0;
         margin-bottom: 20px;
+        width: 100%;
     }
     .footer-child:last-child {
         margin-bottom: 0;
@@ -634,7 +690,7 @@ footer {
         height: auto;
         width: 100%;
     }
-    #video {
+    #video-slider {
         width: 100%;
     }
 }
@@ -646,9 +702,7 @@ footer {
     }
     .image-preview {
         width: 100%;
-        -webkit-flex: 0 0 100px;
-        -ms-flex: 0 0 100px;
-        flex: 0 0 100px;
+        max-width: 600px;
     }
     .texbox {
         text-align: center;
@@ -707,7 +761,7 @@ input.btn {
     font-size: 16px;
 }
 .pagination {
-    width: 50%;
+    width: 100%;
     display: flex;
     padding-left: 0;
     margin: 20px auto;
