--- a/css/estilos-dist.css
+++ b/css/estilos-dist.css
@@ -1,5 +1,15 @@
 /* Estilos generales */
 
+.menu-header, 
+.menu-bar,
+#menu,
+.contenedor,
+.contenido,
+#footer,
+.search-news,
+.social-bar{
+    font-family: 'Aldrich', sans-serif;
+}
 * {
     margin: 0;
     padding: 0;
@@ -63,11 +73,15 @@ ul, ol {
     border-bottom: 4px solid #000;
 }
 
+.sitemap-link{
+    color: #66cc33
+}
+
 /* Estilos header */
 
 header {
     width: 100%;
-    padding: 20px;
+    padding: 5px;
     background: #292828;
     border-bottom: 5px solid #66cc33;
     /* FlEXBOX */
@@ -870,4 +884,177 @@ input.btn {
 }
 .disabled {
     cursor: not-allowed;
+}
+
+/*  Estilos generales Login y registrarse */
+p{
+	margin-top: 10px
+}
+
+.link-registrarse, .link-entrar{
+	color: #66cc33
+}
+
+.titulo {
+    color: #fff;
+    font-family: 'joystixmonospace';
+}
+.titulo span {
+    color: #66cc33;
+}
+
+#envoltura label{
+	color: white;
+	font-family: 'Aldrich', sans-serif;
+}
+
+.contlogin,
+.contregister{
+	position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    padding: 18px 6% 60px 6%;
+	margin: 0 0 35px 0;
+	background: #292828;
+	box-shadow:	
+		0px 0px 20px 15px #66cc33,	
+		0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+	border-radius: 5px;
+}
+.contlogin{
+	z-index: 22;
+}
+/* Animación login y regitrarse */
+.contregister{
+	z-index: 21;
+	opacity: 0;
+}
+
+#irregister:target ~ #envoltura .contregister,
+#irlogin:target ~ #envoltura .contlogin{
+	z-index: 22;
+	-webkit-animation-name: fadeIn;
+	        animation-name: fadeIn;
+	-webkit-animation-delay: .1s;
+	        animation-delay: .1s;
+}
+
+.animate{
+	-webkit-animation-duration: 0.5s;
+	        animation-duration: 0.5s;
+	-webkit-animation-timing-function: ease;
+	        animation-timing-function: ease;
+	-webkit-animation-fill-mode: both;
+	        animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateX(-20px);
+		        transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-webkit-transform: translateX(0);
+		        transform: translateX(0);
+	}
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateX(-20px);
+		        transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-webkit-transform: translateX(0);
+		        transform: translateX(0);
+	}
+}
+
+#irregister:target ~ #envoltura .contlogin,
+#irlogin:target ~ #envoltura .contregister{
+	-webkit-animation-name: fadeOut;
+	        animation-name: fadeOut;
+}
+
+@-webkit-keyframes fadeOut {
+	0% {
+		opacity: 1;
+		-webkit-transform: translateX(0);
+		        transform: translateX(0);
+	}
+	
+	100% {
+		opacity: 0;
+		-webkit-transform: translateX(-20px);
+		        transform: translateX(-20px);
+	}
+}
+
+@keyframes fadeOut {
+	0% {
+		opacity: 1;
+		-webkit-transform: translateX(0);
+		        transform: translateX(0);
+	}
+	
+	100% {
+		opacity: 0;
+		-webkit-transform: translateX(-20px);
+		        transform: translateX(-20px);
+	}
+}
+
+/* Estilos titulos login y registro */
+h1{
+	padding: 2px 0 10px 0;
+	text-align: center;
+	padding-bottom: 30px
+}
+form h1:after{
+	content:' ';
+	display:block;
+	width:100%;
+	height:2px;
+	margin-top:10px;
+	background: linear-gradient(to left, rgb(41,40,40) 0%, rgb(102,204,51) 20%, rgb(102,204,51) 53%, rgb(102,204,51) 79%, rgb(41,40,40) 100%)
+}
+
+/* Estilos botones login y registros */
+.boton{
+	width: 40%;	
+	background: #66cc33;
+	padding: 8px 15px;
+	margin: 10px;
+	color: #fff;	
+	border: 1px solid #66cc33;	
+	border-radius: 5px;
+	font-family: 'joystixmonospace';
+}
+.boton:hover{
+	background: #5BB32E;
+	border: 1px solid #5BB32E;
+	transition: all 0.2s linear;
+}
+
+/* Estilos input login y registro */
+#envoltura [type="text"],
+[type="password"],
+[type="email"]{
+	width: 92%;
+	margin-top: 4px;
+	padding: 10px 5px 10px 32px;	
+	border: 1px;
+	box-sizing : content-box;
+	border-radius: 5px;
+	background: linear-gradient(to left, rgb(41,40,40) 0%, rgb(102,204,51) 20%, rgb(102,204,51) 53%, rgb(102,204,51) 79%, rgb(41,40,40) 100%);
+	font-family: 'joystixmonospace';
 }
