--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,15 @@
 /* Estilos generales */
 
+.menu-header, 
+.menu-bar,
+#menu,
+.contenedor,
+.contenido,
+#footer,
+.search-news,
+.social-bar{
+    font-family: 'Aldrich', sans-serif;
+}
 * {
     margin: 0;
     padding: 0;
@@ -63,11 +73,15 @@ ul, ol {
     border-bottom: 4px solid #000;
 }
 
+.sitemap-link{
+    color: #66cc33
+}
+
 /* Estilos header */
 
 header {
     width: 100%;
-    padding: 20px;
+    padding: 5px;
     background: #292828;
     border-bottom: 5px solid #66cc33;
     /* FlEXBOX */
